# mlphonons

./: .directory  ApplyModels_Phonons.py  README.md  pyproject.toml  ~ApplyModels_Phonons.py
data/C_v/: ~$Report_C_v.xlsx
data/C_v/SavedModels/: Huber_0.pkl  RANSAC_0.pkl  SVM_0.pkl  XGBOOST_0.pkl  random_clustered_dataset_model_random_test_set_0.h5  random_dataset_model_0.json
data/C_v/SplitDataSets/: X_test_scaled_0.csv  y_test_0.csv  y_train_0.csv
data/entropy/: X.csv  y_entropy.csv
data/entropy/SavedModels/: Huber_0.pkl  RANSAC_0.pkl  SVM_0.pkl  XGBOOST_0.pkl  random_clustered_dataset_model_random_test_set_0.h5
data/entropy/SplitDataSets/: X_test_scaled_0.csv  y_test_0.csv  y_train_0.csv
data/eps_total_effective/: X.csv  y_eps_total_effective.csv
data/eps_total_effective/SavedModels/: Huber_0.pkl  RVM_0.pkl  SVM_0.pkl  XGBOOST_0.pkl  random_clustered_dataset_model_random_test_set_0.h5  random_dataset_model_0.json
data/eps_total_effective/SplitDataSets/: X_test_scaled_0.csv  y_test_0.csv  y_train_0.csv
docs/: LR.md  Literature Review.md
notebook/: Train_1.ipynb
src/: .directory
src/mlphonons/: __init__.py
src/scikit-rvm/: README.md  pyproject.toml
