[project]
name = "mlphonons"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Omar Faruk", email = "omarfaruk20@iut-dhaka.edu" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "numpy==1.26.4",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "tensorflow>=2.17.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.1",
    "scikit-rvm @ file:///home/omarf/Project/ML%20Project/mlphonons/src/scikit-rvm",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mlphonons"]
