[project]
name = "scikit-rvm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Omar Faruk", email = "omarfaruk20@iut-dhaka.edu" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["skrvm"]
